5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4134/executions/1575_1559.log
== TEST (2019-03-13 13:12:36) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia"
print(Ada Lovelace foi a pŕimeira programadora da historia.upper)
-- ERROR:
File "XXXX", line 2
    print(Ada Lovelace foi a pŕimeira programadora da historia.upper)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:12:43) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia"
print(Ada Lovelace foi a primeira programadora da historia.upper)
-- ERROR:
File "XXXX", line 2
    print(Ada Lovelace foi a primeira programadora da historia.upper)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:12:45) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia"
print(Ada Lovelace foi a primeira programadora da historia.upper)
-- ERROR:
File "XXXX", line 2
    print(Ada Lovelace foi a primeira programadora da historia.upper)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:13:00) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(Ada Lovelace foi a primeira programadora da historia.upper)
-- ERROR:
File "XXXX", line 2
    print(Ada Lovelace foi a primeira programadora da historia.upper)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:13:17) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(Ada Lovelace foi a primeira programadora da historia.upper())
-- ERROR:
File "XXXX", line 2
    print(Ada Lovelace foi a primeira programadora da historia.upper())
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:13:19) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(Ada Lovelace foi a primeira programadora da historia.upper())
-- EXECUTION TIME:
0.163237
-- ERROR:
  File "/home/codebench/codes/1575/1559/main.py", line 2
    print(Ada Lovelace foi a primeira programadora da historia.upper())
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:13:54) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(Ada Lovelace foi a primeira programadora da historia..upper())
-- ERROR:
File "XXXX", line 2
    print(Ada Lovelace foi a primeira programadora da historia..upper())
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:14:00) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(Ada Lovelace foi a primeira programadora da historia. .upper())
-- ERROR:
File "XXXX", line 2
    print(Ada Lovelace foi a primeira programadora da historia. .upper())
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:15:32) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("Ada Lovelace foi a primeira programadora da historia." .upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:15:35) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("Ada Lovelace foi a primeira programadora da historia." .upper())
-- EXECUTION TIME:
0.201104
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
